--- a/files/coc-settings.json
+++ b/files/coc-settings.json
@@ -14,57 +14,5 @@
   "prettier.trailingComma": "all",
   "prettier.eslintIntegration": true,
   "prettier.stylelintIntegration": true,
-  "prettier.singleQuote": true,
-  "cSpell.userWords": [
-    "aggs",
-    "aviasales",
-    "brandings",
-    "busfor",
-    "cookieы",
-    "daterange",
-    "dbname",
-    "git’а",
-    "hash’ами",
-    "imageable",
-    "marker'а",
-    "mysqldump",
-    "omio",
-    "otgo",
-    "postgresql",
-    "reindex",
-    "staging'ов",
-    "submit'им",
-    "task’и",
-    "travelask",
-    "utms",
-    "Бэкенд",
-    "Матчинг",
-    "Матчит",
-    "Мёрджем",
-    "Омио",
-    "Реиндекс",
-    "Слаг",
-    "Твердохлебовым",
-    "Фронтенд",
-    "Хардкодом",
-    "Ширыкаловым",
-    "админку",
-    "букинга",
-    "бэкенда",
-    "генериться",
-    "импортить",
-    "коммиты",
-    "матчинга",
-    "матчингу",
-    "неадминов",
-    "несмаченных",
-    "парсера",
-    "присвоится",
-    "редкоиспользуемый",
-    "релизятся",
-    "сматченным",
-    "таск",
-    "тасков",
-    "фронтенда"
-  ]
+  "prettier.singleQuote": true
 }
