--- a/files/coc-settings.json
+++ b/files/coc-settings.json
@@ -16,21 +16,32 @@
   "prettier.stylelintIntegration": true,
   "prettier.singleQuote": true,
   "cSpell.userWords": [
+    "Arel",
+    "Contentable",
+    "Geokit",
+    "Serializers",
     "aggs",
     "aviasales",
+    "bookmarkables",
     "brandings",
     "busfor",
+    "byebug",
+    "concat",
     "cookieы",
     "daterange",
     "dbname",
+    "enumerize",
     "git’а",
+    "gostats",
     "hash’ами",
     "imageable",
     "marker'а",
     "mysqldump",
+    "numericality",
     "omio",
     "otgo",
     "postgresql",
+    "preload",
     "reindex",
     "staging'ов",
     "submit'им",
@@ -43,6 +54,7 @@
     "Мёрджем",
     "Омио",
     "Реиндекс",
+    "Склонировать",
     "Слаг",
     "Твердохлебовым",
     "Фронтенд",
