--- a/.config/sway/config
+++ b/.config/sway/config
@@ -33,6 +33,12 @@ input "1739:32382:PNP0C50:0e_06CB:7E7E_Touchpad" {
    middle_emulation enabled
 }
 
+input "1739:52631:DELL08E0:00_06CB:CD97_Touchpad" {
+   dwt enabled
+   tap enabled
+   natural_scroll enabled
+   middle_emulation enabled
+}
 
 input "type:keyboard" {
     xkb_layout us,ru
