--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -23,7 +23,7 @@ font=iosevka:size=8
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
 # initial-window-mode=windowed
-# pad=2x2                             # optionally append 'center'
+pad=6x6                             # optionally append 'center'
 # resize-delay-ms=100
 
 # notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
@@ -49,7 +49,7 @@ font=iosevka:size=8
 # indicator-format=
 
 [url]
-# launch=xdg-open ${url}
+launch=xdg-open ${url}
 # label-letters=sadfjklewcmpgh
 # osc8-underline=url-mode
 # protocols=http, https, ftp, ftps, file, gemini, gopher
@@ -67,7 +67,7 @@ font=iosevka:size=8
 # alternate-scroll-mode=yes
 
 [colors]
-# alpha=1.0
+alpha=0.85
 # foreground=dcdccc
 # background=111111
 
