--- a/.config/i3/config
+++ b/.config/i3/config
@@ -114,6 +114,19 @@ bindsym $mod+r mode "resize"
 #    status_command i3status
 #}
 bar {
+    i3bar_command i3bar --transparency
+    #status_command i3status ~/.config/i3status/config 
     status_command i3blocks
+
     position top
+    padding 0px 8px
+    height 20
+    
+    colors {
+        background #ffffff00
+        statusline #ffffff
+
+        focused_workspace  #ffffff #ffffff #3f3f3f
+        inactive_workspace #33333300 #22222200 #ffffff
+    }
 }
