--- a/.config/i3/config
+++ b/.config/i3/config
@@ -14,11 +14,11 @@ gaps inner 8
 client.focused #000000 #ffffff #ffffff
 
 exec_always "setxkbmap -model pc105 -layout us,ru -option grp:alt_space_toggle"
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-exec --no-startup-id udiskie
-exec --no-startup-id picom
-exec --no-startup-id blueman-applet
-exec --no-startup-id feh --bg-scale ~/Backgrounds/1.jpg
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh &
+exec --no-startup-id udiskie &
+exec --no-startup-id picom &
+exec --no-startup-id blueman-applet &
+exec --no-startup-id feh --bg-scale ~/Backgrounds/1.jpg &
 
 bindsym $mod+Return exec $term
 bindsym $mod+Shift+q kill
