--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -17,124 +17,95 @@
 ;==========================================================
 
 [colors]
-background-alt = #00282A2E
-background = #aaffffff
-foreground = #ffffff
-primary = #3f3f3f
-secondary = #8ABEB7
-alert = #A54242
-disabled = #000000
+bg = #DD24273a
+fg = #cad3f5
 
+black = #363a4f
+red = #E78284
+green = #A6D189
+yellow = #E5C890
+blue = #8CAAEE
+magenta = #F4B8E4
+cyan = #81C8BE
+white = #B5BFE2
+
+
+
+include-file = ~/.config/polybar/modules.ini
+
+
+;# ---- НАСТРОЙКИ САМОЙ ПАНЕЛИ ------------------------------------------------
 [bar/example]
-width = 100%
-height = 20pt
+
+width = 1920
+height = 16pt
+radius = 0
+
+# Отступы панели которые нефига не работают в i3
+offset-x = 10
+offset-y = 5
 
 ; dpi = 96
 
-background = ${colors.background-alt}
-foreground = ${colors.foreground}
+# Цвета на панели
+background = ${colors.bg}
+foreground = ${colors.fg}
 
-line-size = 3pt
+# Линия под модулями
+line-size = 0pt
 
+# Бордер
 border-size = 4pt
-border-color = #00000000
+border-color = ${colors.bg}
 
-padding-left = 0
+# Внутренние отступы
+padding-left = 1
 padding-right = 1
+module-margin = 0
 
-module-margin = 1
-module-radius = 7
+# Разделитель
+#separator = |
+#separator-foreground = ${colors.disabled}
 
-font-0 = iosevka:pixelsize=10;2
-font-1 = FontAwesome:pixelsize=8;0
+# Подключения шрифтов
+font-0 = JetBrainsMono-Bold:style=Bold:pixelsize=10;2
+font-1 = Symbols Nerd Font:style=Regular:pixelsize=13;3
+#font-2 = Symbols Nerd Font:style=Regular:pixelsize=17;3
+font-2 = jetbrainsmono nerd font:style=Bold:pixelsize=12;3
+font-3 = Symbols Nerd Font:style=Regular:pixelsize=10;2
 
-modules-left = xworkspaces
-modules-center = xwindow
-modules-right = xkeyboard pulseaudio memory cpu date
+# Модули слева
+modules-left = round-left xworkspaces round-right point_2 round-left xwindow round-right
+
+# Модули в центре
+modules-center = round-left memory round-right point_2 round-left cpu round-right point_2 round-left filesystem round-right
+
+# Модули справа
+modules-right = point_2 round-left weather round-right point_2 round-left pulseaudio round-right point_2 round-left xkeyboard round-right point_2 round-left date round-right point_2 round-left powermenu_2 round-right
+
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
 
-tray-position = right
+# Настройки трея
+tray-position = center
+tray-background = ${colors.bg}
+tray-offset-x = 324pt
+tray-offset-y = -4pt
+tray-padding = 5
 
-; override-redirect = true
+; wm-restack = generic
+; wm-restack = bspwm
+; wm-restack = i3
 
-[module/xworkspaces]
-type = internal/xworkspaces
-
-label-active = %name%
-label-active-background = ${colors.background}
-label-active-foreground = ${colors.primary}
-label-active-padding = 1
-
-label-occupied = %name%
-label-occupied-padding = 1
-
-label-urgent = %name%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
-
-label-empty = %name%
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
-
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:60:...%
-
-[module/pulseaudio]
-type = internal/pulseaudio
-label-volume = VOL: %percentage%%
-label-volume-background = ${colors.background}
-label-volume-foreground= ${colors.primary}
-label-volume-padding = 1
-label-muted = muted
-label-muted-background = ${colors.background}
-label-muted-foreground = ${colors.primary}
-label-muted-padding = 1
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-label-layout = %layout%
-label-layout-foreground = ${colors.primary}
-label-layout-background= ${colors.background}
-label-layout-padding= 1
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
-
-[module/memory]
-type = internal/memory
-interval = 2
-label = RAM: %percentage_used:2%%
-label-foreground = ${colors.primary}
-label-background = ${colors.background}
-label-padding = 1
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-label = CPU:%percentage:2%%
-label-background = ${colors.background}
-label-foreground = ${colors.primary}
-label-padding = 1
-
-[module/date]
-type = internal/date
-interval = 1
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
-label = %date%
-label-foreground = ${colors.primary}
-label-background = ${colors.background}
-label-padding = 1
+; override-redirect = false
 
 [settings]
 screenchange-reload = true
-;; pseudo-transparency = true
+pseudo-transparency = true
 
 ; vim:ft=dosini
+
+
