--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -1,16 +1,16 @@
 [module/xworkspaces]
 type = internal/xworkspaces
 
-label-active = 
+label-active = %name%
 label-active-background = ${colors.black}
 label-active-foreground = ${colors.yellow}
 label-active-underline= ${colors.black}
 label-active-padding = 1
 
-label-occupied = 
+label-occupied = %name%
 label-occupied-padding = 1
 label-occupied-background = ${colors.black}
-label-occupied-foreground = ${colors.bg}
+label-occupied-foreground = ${colors.fg}
 
 label-urgent = %name%
 label-urgent-background = ${colors.red}
