--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -153,10 +153,10 @@ fade-delta = 10
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-# inactive-opacity = 1
+inactive-opacity = 1
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-# frame-opacity = 1.0
+frame-opacity = 1.0
 
 # Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
 # inactive-opacity-override = true
@@ -184,7 +184,7 @@ focus-exclude = [
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 5;
+corner-radius = 4;
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
@@ -193,13 +193,13 @@ rounded-corners-exclude = [
 "class_g = 'Polybar'"
 ];
 
-blur: {
-  method = "dual_kawase";
-  strength = 12;
-  background = true;
-  background-frame = false;
-  background-fixed = false;
-}
+#blur: {
+#  method = "dual_kawase";
+#  strength = 3;
+#  background = true;
+#  background-frame = false;
+#  background-fixed = false;
+#}
 
 
 # Exclude conditions for background blur.
@@ -225,7 +225,7 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, `egl` or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-backend = "glx"
+backend = "xrender"
 
 # Use higher precision during rendering, and apply dither when presenting the
 # rendered screen. Reduces banding artifacts, but might cause performance
@@ -439,6 +439,6 @@ wintypes:
 
 opacity-rule = [
   "100:class_g = 'St' && focused",
-  "50:class_g = 'St' && !focused",
+  "100:class_g = 'St' && !focused",
   "100:fullscreen",
 ];
