--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -57,30 +57,34 @@ font:
 #draw_bold_text_with_bright_colors: false
 
 colors:
+  # Default colors
   primary:
-    background: "#2d3147" # base
-    foreground: "#CAD3f5" # text
+    # hard contrast: background = '0x1d2021'
+    background: '0x282828'
+    # soft contrast: background = '0x32302f'
+    foreground: '0xebdbb2'
 
+  # Normal colors
   normal:
-    black: "#51576D" # surface1
-    red: "#E78284" # red
-    green: "#A6D189" # green
-    yellow: "#E5C890" # yellow
-    blue: "#8CAAEE" # blue
-    magenta: "#F4B8E4" # pink
-    cyan: "#81C8BE" # teal
-    white: "#B5BFE2" # subtext1
+    black:   '0x282828'
+    red:     '0xcc241d'
+    green:   '0x98971a'
+    yellow:  '0xd79921'
+    blue:    '0x458588'
+    magenta: '0xb16286'
+    cyan:    '0x689d6a'
+    white:   '0xa89984'
+
+  # Bright colors
   bright:
-    black: "#626880" # surface2
-    red: "#E78284" # red
-    green: "#A6D189" # green
-    yellow: "#E5C890" # yellow
-    blue: "#8CAAEE" # blue
-    magenta: "#F4B8E4" # pink
-    cyan: "#81C8BE" # teal
-    white: "#A5ADCE" # subtext0
-  #indexed_colors: []
-  transparent_background_colors: true
+    black:   '0x928374'
+    red:     '0xfb4934'
+    green:   '0xb8bb26'
+    yellow:  '0xfabd2f'
+    blue:    '0x83a598'
+    magenta: '0xd3869b'
+    cyan:    '0x8ec07c'
+    white:   '0xebdbb2'
 
 #bell:
   #animation: EaseOutExpo
