--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -763,7 +763,7 @@ font_size 14.0
 #: that setting a non-zero window_margin_width overrides this and
 #: causes all borders to be drawn.
 
-# window_margin_width 0
+window_margin_width 4
 
 #: The window margin (in pts) (blank area outside the border). A
 #: single value sets all four sides. Two values set the vertical and
@@ -1060,7 +1060,7 @@ font_size 14.0
 
 #: The foreground and background colors.
 
-# background_opacity 1.0
+#background_opacity 0.75
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
