--- a/.config/sway/config
+++ b/.config/sway/config
@@ -57,6 +57,9 @@ bindsym $mod+Shift+q kill
 bindsym $mod+Shift+s exec grim -g "$(slurp)" -t png - | wl-copy -t image/png
 bindsym $mod+d exec $menu
 
+bindsym Control+Mod1+a exec ~/dotfiles/scripts/sys-notify
+bindsym Control+Mod1+s exec ~/dotfiles/scripts/base-notify
+
 floating_modifier $mod normal
 
 bindsym $mod+Shift+c reload
@@ -86,22 +89,12 @@ bindsym $mod+2 workspace number 2
 bindsym $mod+3 workspace number 3
 bindsym $mod+4 workspace number 4
 bindsym $mod+5 workspace number 5
-bindsym $mod+6 workspace number 6
-bindsym $mod+7 workspace number 7
-bindsym $mod+8 workspace number 8
-bindsym $mod+9 workspace number 9
-bindsym $mod+0 workspace number 10
 
 bindsym $mod+Shift+1 move container to workspace number 1
 bindsym $mod+Shift+2 move container to workspace number 2
 bindsym $mod+Shift+3 move container to workspace number 3
 bindsym $mod+Shift+4 move container to workspace number 4
 bindsym $mod+Shift+5 move container to workspace number 5
-bindsym $mod+Shift+6 move container to workspace number 6
-bindsym $mod+Shift+7 move container to workspace number 7
-bindsym $mod+Shift+8 move container to workspace number 8
-bindsym $mod+Shift+9 move container to workspace number 9
-bindsym $mod+Shift+0 move container to workspace number 10
 
 bindsym $mod+b splith
 bindsym $mod+v splitv
@@ -150,24 +143,5 @@ client.focused          $bg       $bg       $white    $white     $white
 client.focused_inactive $bg       $bg       $gray     $bg        $bg
 client.unfocused        $bg       $bg       $gray     $bg        $bg
 client.urgent           $red      $bg       $red      $red       $red
-
-bar {
-    position top
-
-    status_command i3blocks
-
-    colors {
-        background $bg
-        statusline $white
-        # class              border  backgr. text
-        focused_workspace    $bg     $bg     $white
-        inactive_workspace   $bg     $bg     $gray
-        active_workspace     $bg     $bg     $gray
-        urgent_workspace     $bg     $bg     $red
-    }
-
-    # swaybar_command waybar
-}
-
 
 include /etc/sway/config.d/*
