--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -8,7 +8,7 @@
 # title=foot
 # locked-title=no
 
-font=iosevka:size=14
+font=Iosevka:size=14
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -67,7 +67,7 @@ blink=yes
 # alternate-scroll-mode=yes
 
 [colors]
-alpha=0.7
+#alpha=0.7
 background=282828
 foreground=ebdbb2
 regular0=282828
