--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,9 @@ set-option -g renumber-windows on
 
 set-option -g focus-events on
 
-set -g default-terminal "xterm-256color"
+set -sg escape-time 0
 
+set -g default-terminal "tmux-256color"
+
+set-option -ga terminal-overrides ",tmux-256color-italic:Tc"
 
