--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -19,9 +19,9 @@ normal = "block"
 select = "underline"
 
 [editor.statusline]
-left = ["mode", "version-control", "workspace-diagnostics" ]
-center = ["spinner", "file-name", "file-modification-indicator"]
-right = ["diagnostics", "selections", "separator", "position", "separator", "file-line-ending", "separator", "file-type"]
+left = ["mode", "version-control"]
+center = ["diagnostics", "spinner", "file-name", "file-modification-indicator"]
+right = ["workspace-diagnostics", "selections", "separator", "position", "separator", "file-line-ending", "separator", "file-type"]
 separator = "|"
 mode.normal = "Нормальный"
 mode.insert = "Вставка"
