--- a/.config/sway/config
+++ b/.config/sway/config
@@ -12,6 +12,10 @@ set $darkgray #707070
 
 set $term foot
 
+set $rofi_cmd rofi \
+        -terminal '$term'
+set $menu $rofi_cmd -show combi -combi-modes drun#run -modes combi
+
 font pango:IosevkaTerm Nerd Font 12
 
 output * bg ~/Backgrounds/2.jpg fill
@@ -48,9 +52,10 @@ bindsym XF86AudioMute             exec --no-startup-id pactl set-sink-mute     @
 bindsym $mod+XF86AudioRaiseVolume exec --no-startup-id pactl set-source-volume @DEFAULT_SOURCE@   +10%
 bindsym $mod+XF86AudioLowerVolume exec --no-startup-id pactl set-source-volume @DEFAULT_SOURCE@   -10%
 bindsym XF86AudioMicMute          exec --no-startup-id pactl set-source-mute   @DEFAULT_SOURCE@ toggle
+bindsym $mod+Shift+m              exec --no-startup-id pactl set-source-mute   @DEFAULT_SOURCE@ toggle
 
-bindsym $mod+Shift+s exec --no-startup-id screenshot-select-wl
-bindsym $mod+d       exec --no-startup-id rofi -show drun
+bindsym $mod+Shift+s exec --no-startup-id grimshot copy area
+bindsym $mod+d       exec --no-startup-id $menu
 
 bindsym Control+Mod1+s exec sys-notify
 bindsym Control+Mod1+c exec cal-notify
@@ -61,7 +66,7 @@ floating_modifier $mod
 bindsym $mod+Return       exec $term bash -c "distrobox enter dev -- bash"
 bindsym $mod+Shift+Return exec $term
 
-bindsym $mod+Shift+q kill
+bindsym $mod+Shift+x kill
 
 bindsym $mod+$left focus left
 bindsym $mod+$down focus down
@@ -73,56 +78,36 @@ bindsym $mod+Shift+$down move down
 bindsym $mod+Shift+$up move up
 bindsym $mod+Shift+$right move right
 
-bindsym $mod+v split v
-
 bindsym $mod+f fullscreen toggle
-
 bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+bindsym $mod+n layout toggle split
+bindsym $mod+a layout tabbed
 
 bindsym $mod+Shift+space floating toggle
 
 bindsym $mod+space focus mode_toggle
-
-bindsym $mod+a focus parent
 
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
 set $ws4 "4"
 set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
 
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
+bindsym $mod+q workspace number $ws1
+bindsym $mod+w workspace number $ws2
+bindsym $mod+e workspace number $ws3
+bindsym $mod+r workspace number $ws4
+bindsym $mod+t workspace number $ws5
 
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
+bindsym $mod+Shift+q move container to workspace number $ws1
+bindsym $mod+Shift+w move container to workspace number $ws2
+bindsym $mod+Shift+e move container to workspace number $ws3
+bindsym $mod+Shift+r move container to workspace number $ws4
+bindsym $mod+Shift+t move container to workspace number $ws5
 
 bindsym $mod+Shift+c reload
-bindsym $mod+Shift+r restart
-bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
+bindsym $mod+Shift+n restart
+bindsym $mod+Shift+period exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
 
 mode "resize" {
   bindsym $left  resize shrink width  5 px or 5 ppt
@@ -135,7 +120,7 @@ mode "resize" {
   bindsym $mod+r mode "default"
 }
 
-bindsym $mod+r mode "resize"
+bindsym $mod+y mode "resize"
 
 client.focused                 $bg        $bg       $fg            $red         $red
 client.focused_inactive        $bg        $bg       $darkgray      $bg          $bg
