--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -37,6 +37,7 @@ esc = ["collapse_selection", "keep_primary_selection"]
 C-g = ":sh topen-git"
 C-p = ":sh topen-lf"
 C-t = ":sh topen-bash"
+C-f = [":new", ":insert-output lf-pick", "select_all", "split_selection_on_newline", "goto_file", "goto_last_modified_file", ":buffer-close!", ":redraw"]
 A-f = ":format"
 A-q = ":buffer-close"
 A-w = [
