--- a/config/helix/config.toml
+++ b/config/helix/config.toml
@@ -19,10 +19,9 @@ normal = "block"
 select = "underline"
 
 [editor.statusline]
-left = ["mode", "version-control"]
-center = ["diagnostics", "spinner", "file-name", "file-modification-indicator"]
-right = ["workspace-diagnostics", "selections", "separator", "position", "separator", "file-line-ending", "separator", "file-type"]
-separator = "|"
+left = ["mode"]
+center = ["file-name", "file-modification-indicator"]
+right = ["version-control", "spinner",  "diagnostics","workspace-diagnostics",  "position",  "file-line-ending",  "file-type"]
 mode.normal = "Нормальный"
 mode.insert = "Вставка"
 mode.select = "Визуальный"
@@ -40,6 +39,8 @@ C-t = ":sh topen-bash"
 C-f = [":new", ":insert-output lf-pick", "select_all", "split_selection_on_newline", "goto_file", "goto_last_modified_file", ":buffer-close!", ":redraw"]
 A-f = ":format"
 A-q = ":buffer-close"
+B = ":pipe-to tmux split-window -v helix-git-blame"
+H = ":pipe-to tmux split-window -v helix-git-history"
 A-w = [
     "save_selection",
     "select_all",
