--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,4 +15,5 @@ set -sg escape-time 0
 set -g default-terminal "tmux-256color"
 
 set-option -ga terminal-overrides ",tmux-256color-italic:Tc"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
