--- a/config/helix/config.toml
+++ b/config/helix/config.toml
@@ -29,9 +29,19 @@ mode.select = "Визуальный"
 [editor.whitespace.render]
 space = "all"
 tab = "all"
-newline = "none"
+newline = "all"
+
+[keys.normal."["]
+b = "goto_previous_buffer"
+
+[keys.normal."]"]
+b = "goto_next_buffer"
+
+[keys.select]
+X = ["extend_line_up", "extend_to_line_bounds"]
 
 [keys.normal]
+X = ["extend_line_up", "extend_to_line_bounds"]
 esc = ["collapse_selection", "keep_primary_selection"]
 C-g = ":sh topen-git"
 C-p = ":sh topen-lf"
