--- a/config/helix/config.toml
+++ b/config/helix/config.toml
@@ -1,4 +1,4 @@
-theme = "github_light_transparent"
+theme = "base16_terminal"
 
 [editor]
 bufferline              = "multiple"
@@ -26,10 +26,10 @@ mode.normal = "Нормальный"
 mode.insert = "Вставка"
 mode.select = "Визуальный"
 
-[editor.whitespace.render]
-space = "all"
-tab = "all"
-newline = "all"
+[editor.indent-guides]
+render = true
+character = "╎" # Some characters that work well: "▏", "┆", "┊", "⸽"
+skip-levels = 1
 
 [keys.normal."["]
 b = "goto_previous_buffer"
