--- a/config/helix/config.toml
+++ b/config/helix/config.toml
@@ -1,8 +1,8 @@
-theme = "github_light_transparent"
+theme = "term16_dark"
 
 [editor]
 bufferline              = "multiple"
-rulers                  = [80]
+rulers                  = [120]
 shell                   = ["/bin/bash", "-c"]
 line-number             = "relative"
 lsp.display-inlay-hints = false
@@ -20,35 +20,44 @@ select = "underline"
 
 [editor.statusline]
 left = ["mode"]
-center = ["file-name", "file-modification-indicator"]
+center = ["file-absolute-path", "file-modification-indicator"]
 right = ["version-control", "spinner",  "diagnostics","workspace-diagnostics",  "position",  "file-line-ending",  "file-type"]
 mode.normal = "Нормальный"
 mode.insert = "Вставка"
 mode.select = "Визуальный"
 
 [editor.whitespace.render]
-space = "all"
-tab = "all"
-newline = "none"
+newline = "all" 
+
+[editor.whitespace.characters]
+newline = "·"
+
+[editor.indent-guides]
+render = true
+character = "▏"
+skip-levels = 1
+
+[keys.normal."["]
+b = "goto_previous_buffer"
+
+[keys.normal."]"]
+b = "goto_next_buffer"
+
+[keys.select]
+X = ["extend_line_up", "extend_to_line_bounds"]
 
 [keys.normal]
+X   = ["extend_line_up", "extend_to_line_bounds"]
 esc = ["collapse_selection", "keep_primary_selection"]
 C-g = ":sh topen-git"
-C-p = ":sh topen-lf"
-C-t = ":sh topen-bash"
-C-f = [":new", ":insert-output lf-pick", "select_all", "split_selection_on_newline", "goto_file", "goto_last_modified_file", ":buffer-close!", ":redraw"]
 A-f = ":format"
 A-q = ":buffer-close"
-B = ":pipe-to tmux split-window -v helix-git-blame"
-H = ":pipe-to tmux split-window -v helix-git-history"
-A-w = [
-    "save_selection",
-    "select_all",
-    # Delete trailing whitespace from end of each line
-    ":pipe sed 's/[ \t]*$//'",
-    # Delete trailing blank lines (including whitespace) from end of the buffer
-    ":pipe awk '/^\\s*$/ {b=b $0 \"\\n\"; next;} {printf \"%s\",b; b=\"\"; print;}'",
-    "collapse_selection",
-    "keep_primary_selection",
-    ":write",
-]
+A-j = [ "extend_to_line_bounds", "delete_selection", "paste_after" ]
+A-k = [ "extend_to_line_bounds", "delete_selection", "move_line_up", "paste_before" ]
+
+[keys.normal.tab]
+b   = ":pipe-to tmux split-window -v helix-git-blame"
+h   = ":pipe-to tmux split-window -v helix-git-history"
+c   = ":pipe-to tmux split-window -v helix-git-line-commit"
+t   = ":sh topen-bash"
+tab   = [":new", ":insert-output lf-pick", "select_all", "split_selection_on_newline", "goto_file", "goto_last_modified_file", ":buffer-close!", ":redraw"]
