feat: add arch to master

--- a/config/k9s/clusters/amethyst/admin@amethyst/config.yaml
+++ b/config/k9s/clusters/amethyst/admin@amethyst/config.yaml
@@ -8,7 +8,7 @@ k9s:
     - cloudnative-pg
     - questions
   view:
-    active: context
+    active: helmrelease
   featureGates:
     nodeShell: false
   portForwardAddress: localhost
