--- a/config/sway/config
+++ b/config/sway/config
@@ -56,9 +56,9 @@ bindsym $mod+Shift+m              exec --no-startup-id pactl set-source-mute   @
 bindsym $mod+Shift+s exec --no-startup-id grimshot copy area
 bindsym $mod+d       exec --no-startup-id $menu
 
-bindsym Control+Mod1+s exec sys-notify
-bindsym Control+Mod1+c exec cal-notify
-bindsym Control+Mod1+v exec $term -e toggle-vpn
+bindsym Control+Mod1+s exec ~/dotfiles/scripts/sys-notify
+bindsym Control+Mod1+c exec ~/dotfiles/scripts/cal-notify
+bindsym Control+Mod1+v exec $term -e ~/dotfiles/scripts/toggle-vpn
 
 floating_modifier $mod
 
@@ -90,18 +90,30 @@ set $ws2 "2"
 set $ws3 "3"
 set $ws4 "4"
 set $ws5 "5"
+set $ws6 "6"
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
 
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
 bindsym $mod+4 workspace number $ws4
 bindsym $mod+5 workspace number $ws5
+bindsym $mod+6 workspace number $ws6
+bindsym $mod+7 workspace number $ws7
+bindsym $mod+8 workspace number $ws8
+bindsym $mod+9 workspace number $ws9
 
 bindsym $mod+Shift+1 move container to workspace number $ws1
 bindsym $mod+Shift+2 move container to workspace number $ws2
 bindsym $mod+Shift+3 move container to workspace number $ws3
 bindsym $mod+Shift+4 move container to workspace number $ws4
 bindsym $mod+Shift+5 move container to workspace number $ws5
+bindsym $mod+Shift+6 move container to workspace number $ws6
+bindsym $mod+Shift+7 move container to workspace number $ws7
+bindsym $mod+Shift+8 move container to workspace number $ws8
+bindsym $mod+Shift+9 move container to workspace number $ws9
 
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
